  Language. Other types are deprecated since 1.32.
* Skin::doEditSectionLink requires type Language for the parameter $lang.
  The parameters $tooltip and $lang are mandatory. Omitting the parameters is
  deprecated since 1.32.
* Language::truncate(), deprecated in 1.31, has been removed.
* UtfNormal, deprecated in 1.25, was removed. Use UtfNormal\Validator directly
  instead.
* …

=== Deprecations in 1.33 ===
* The configuration option $wgUseESI has been deprecated, and is expected
  to be removed in a future release.
* The configuration option $wgSquidPurgeUseHostHeader has been deprecated,
  and is expected to be removed in a future release.
* The configuration options $wgFixArabicUnicode and $wgFixMalayalamUnicode,
  introduced in MW 1.17, have been deprecated.  These fixes will always be
  applied for Arabic and Malayalam in the future.  Please enable these on
  your local wiki (if you have them explicitly set to false) and run
  maintenance/cleanupTitles.php to fix any existing page titles.
* The LegacyHookPreAuthenticationProvider class, deprecated since its creation
  in 1.27 as part of the AuthManager re-write, now emits deprecation warnings.
  This will help identify the issue if you added it to $wgAuthManagerConfig.
* …

=== Other changes in 1.33 ===
* …

== Compatibility ==
MediaWiki 1.33 requires PHP 7.0.0 or later. Although HHVM 3.18.5 or later is
supported, it is generally advised to use PHP 7.0.0 or later for long term
support.

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature. There is experimental support for
Oracle and Microsoft SQL Server.

The supported versions are:

* MySQL 5.5.8 or later
* PostgreSQL 9.2 or later
* SQLite 3.3.7 or later
* Oracle 9.0.1 or later
* Microsoft SQL Server 2005 (9.00.1399)

== Upgrading ==
1.33 has several database changes since 1.32, and will not work without schema